# pullpiri

./: .gitignore  404.html  CLUSTERING.md  ERROR_HANDLING_IMPLEMENTATION.md  Makefile  README.md  demo_clustering.sh  fmt_output.txt  index.html  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  release.yml
LICENSES/: README.md
architecture/: index.html
architecture/package/: index.html
architecture/pullpiri_resource_README/: index.html
architecture/scenario/: index.html
containers/: Dockerfile  install-agent.sh  install-pullpiri.sh  piccolo-player.yaml  piccolo-server.yaml  piccolo-uninstall.sh  pullpiri-agent.kube  pullpiri-agent.yaml  pullpiri-player.kube  pullpiri-player.yaml  pullpiri-server.kube  pullpiri-server.yaml  uninstall-agent.sh  uninstall-pullpiri.sh
containers/devonly/: install-agent.sh  install-pullpiri.sh  uninstall-agent.sh  uninstall-pullpiri.sh
containers/scripts/: pullpiri-player.sh  pullpiri-server.sh
contribution/: baseline-management-kr.md  branch-management-kr.md  coding-rule-kr.md
doc/: README.md  index.md  mkdocs.yml  requirements.txt  why-pullpiri.md
examples/: README.md  error_handling_demo.rs  model_state_example.md  node.yaml  resource_test.sh  timpani.sh
scripts/: buildNpushdocker.sh  clustering_demo.sh  installdeps.sh
search/: search_index.json
src/: Cargo.toml  settings.yaml
src/server/persistency-service/: Cargo.toml
src/server/persistency-service/src/: lib.rs  main.rs
why-pullpiri/: index.html
(+305 files in other folders)
