[package]
name = "persistency-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "persistency-service"
path = "src/main.rs"

[dependencies]
# Persistency KVS library
rust_kvs = { path = "../../../../persistency/src/rust/rust_kvs" }

# gRPC and async
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Common module
common = { path = "../../common" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []